--- a/src/components/Navbar/nav-tab.css
+++ b/src/components/Navbar/nav-tab.css
@@ -1,12 +1,28 @@
 /** @format */
-
-.navbar {
-  /* position: absolute; */
+.navBar {
+  top: 0px;
+  left: 0px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  box-shadow: 0px 1px 6px #00000026;
+  opacity: 1;
   width: 100%;
   /* z-index: 1; */
   font-weight: 500;
-  background-color: #fff;
 }
+.navbar.navBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+  z-index: 1;
+  transition: height 0.7s ease-in-out;
+}
+.navbar.navBar.top {
+  height: 80px;
+  top: 0;
+}
+
 .navbar-brand img {
   width: 150px;
 }
@@ -25,4 +41,18 @@ a {
 }
 .navbar-nav .nav-link.active, .navbar-nav .show>.nav-link{
   color:#007bff
+}
+.dropdown-toggle::after{
+  display: none !important;
+}
+
+.nav-link a{
+  color:#4a6f8a;
+}
+
+.anchor {
+  display: block;
+  position: relative;
+  top: -74px;
+  visibility: hidden;
 }
