--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -9,7 +9,7 @@
     padding-bottom: 20px;
 }
 .Chairman{
-    align-items: end;
+    align-items: flex-end;
     display: flex;
     flex-direction: column;
     padding-bottom: 50px;
@@ -23,7 +23,7 @@
     padding-bottom: 20px;
 }
 .Director{
-    align-items: end;
+    align-items: flex-end;
     display: flex;
     flex-direction: column;
     padding-bottom: 50px;
