--- a/src/components/Logistics/Logistics.css
+++ b/src/components/Logistics/Logistics.css
@@ -1,10 +1,16 @@
-.logistic-section{
+.logistic-section {
     background-color: black;
     margin-top: 80px;
     color: #cfcccc;
     margin-bottom: -16px;
 }
-.how-to-reach{
+
+.how-to-reach {
     padding-top: 50px;
     padding-bottom: 50px;
+}
+
+.reach {
+    margin-left: 15px;
+    padding: 15px;
 }
