--- a/src/components/Program_Guide/Program_Guide.css
+++ b/src/components/Program_Guide/Program_Guide.css
@@ -1,10 +1,177 @@
-.program-guide-section{
+.program-guide-section {
     background-color: black;
     margin-top: 80px;
     color: #cfcccc;
     margin-bottom: -16px;
 }
-.panal-discussion{
+
+.panal-discussion {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+
+@mixin tablet-and-up {
+    @media screen and (min-width: 769px) {
+        @content;
+    }
+}
+
+@mixin mobile-and-up {
+    @media screen and (min-width: 601px) {
+        @content;
+    }
+}
+
+@mixin tablet-and-down {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mobile-only {
+    @media screen and (max-width: 600px) {
+        @content;
+    }
+}
+
+.schedule {
     padding-top: 50px;
     padding-bottom: 50px;
+}
+
+.sessions li {
+    list-style: none;
+    padding: 0;
+}
+
+.containerSchedule {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+    padding: 1rem 0;
+    flex-direction: column;
+}
+
+.containerSchedule .wrapper h1 {
+    color: #191e47;
+}
+
+.wrapper {
+    background: #eaf6ff;
+    padding: 2rem;
+    border-radius: 15px;
+}
+
+h1 {
+    font-size: 1.1rem;
+    font-family: sans-serif;
+}
+
+.sessions {
+    margin-top: 2rem;
+    border-radius: 12px;
+    position: relative;
+}
+
+.containerSchedule .wrapper li {
+    padding-bottom: 1.5rem;
+    border-left: 1px solid #abaaed;
+    position: relative;
+    padding-left: 20px;
+    margin-left: 10px;
+
+    &:last-child {
+        border: 0px;
+        padding-bottom: 0;
+    }
+
+    &:before {
+        content: '';
+        width: 15px;
+        height: 15px;
+        background: white;
+        border: 1px solid #4e5ed3;
+        box-shadow: 3px 3px 0px #bab5f8;
+        box-shadow: 3px 3px 0px #bab5f8;
+        border-radius: 50%;
+        position: absolute;
+        left: -10px;
+        top: 0px;
+    }
+}
+
+.time {
+    color: #2a2839;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+
+    @include mobile-and-up {
+        font-size: .9rem;
+    }
+
+    @include mobile-only {
+        margin-bottom: .3rem;
+        font-size: 0.85rem;
+    }
+
+}
+
+.containerSchedule .wrapper p {
+    color: #4f4f4f;
+    font-family: sans-serif;
+    line-height: 1.5;
+    margin-top: 0.4rem;
+
+    @include mobile-only {
+        font-size: .9rem;
+    }
+}
+
+
+.containerSchedule2 {
+    max-width: 1024px;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.timeline-item {
+    padding: 3em 2em 2em;
+    position: relative;
+    color: rgba(255, 253, 253, 0.863);
+    border-left: 2px solid rgba(252, 242, 242, 0.884);
+}
+
+.timeline-item p {
+    font-size: 1rem;
+}
+
+.timeline-item::before {
+    content: attr(date-is);
+    position: absolute;
+    left: 2em;
+    font-weight: bold;
+    top: 1em;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 0.785rem;
+}
+
+.timeline-item::after {
+    width: 10px;
+    height: 10px;
+    display: block;
+    top: 1em;
+    position: absolute;
+    left: -7px;
+    border-radius: 10px;
+    content: '';
+    border: 2px solid rgba(0, 0, 0, .3);
+    background: white;
+}
+
+.timeline-item:last-child {
+    border-image: linear-gradient(to bottom, rgba(255, 253, 253, 0.863) 60%, rgba(0, 0, 0, 0)) 1 100%;
 }
