--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -32,3 +32,9 @@
     padding-top: 50px;
     padding-bottom: 20px;
 }
+
+@media screen and (max-width: 450px) {
+    .message-section img{
+        width: 100%;
+    }
+}
