--- a/src/components/Contact_Us/Contact_Us.css
+++ b/src/components/Contact_Us/Contact_Us.css
@@ -15,6 +15,7 @@ color: #000000;
     margin-top: 80px;
     color: #cfcccc;
     margin-bottom: -16px;
+    height: 78vh;
 }
 .contact-details{
     padding-top: 50px;
