--- a/src/components/Outreach/Outreach.css
+++ b/src/components/Outreach/Outreach.css
@@ -11,3 +11,8 @@
 .react-multi-carousel-track li{
     padding-left: 2px;
 }
+/* @media screen and (max-width: 450px) {
+    .react-multi-carousel-track li{
+        padding: 0;
+    }
+} */
