height width adjusted

--- a/src/components/Outreach/Outreach.css
+++ b/src/components/Outreach/Outreach.css
@@ -9,7 +9,8 @@
     padding-bottom: 50px;
 }
 .react-multi-carousel-track li{
-    width: 410px !important;
+    width: 350px !important;
+    height: 400px !important;
 }
 /* @media screen and (max-width: 450px) {
     .react-multi-carousel-track li{
