--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -7,7 +7,7 @@
   /* height: 300px; */
   text-align: center;
   font-weight: 100;
-  background-color: #232741;
+  /* background-color: #232741; */
   -webkit-overflow-x: visible;
   -moz-overflow-x: visible;
   -o-overflow-x: visible;
@@ -17,8 +17,9 @@
   -o-animation: fadeIn 1 5s ease-out;
   animation: fadeIn 1 5s ease-out;
 }
+
 .BG-blue {
-  background-color: #232741;
+  /* background-color: #232741; */
 }
 
 .light {
@@ -147,76 +148,95 @@
     top: 100vh;
     opacity: 0;
   }
+
   25% {
     opacity: 1;
   }
+
   50% {
     top: 0vh;
     opacity: 0.8;
   }
+
   75% {
     opacity: 1;
   }
+
   100% {
     top: -100vh;
     opacity: 0;
   }
 }
+
 @-moz-keyframes floatUp {
   0% {
     top: 100vh;
     opacity: 0;
   }
+
   25% {
     opacity: 1;
   }
+
   50% {
     top: 0vh;
     opacity: 0.8;
   }
+
   75% {
     opacity: 1;
   }
+
   100% {
     top: -100vh;
     opacity: 0;
   }
 }
+
 @-o-keyframes floatUp {
   0% {
     top: 100vh;
     opacity: 0;
   }
+
   25% {
     opacity: 1;
   }
+
   50% {
     top: 0vh;
     opacity: 0.8;
   }
+
   75% {
     opacity: 1;
   }
+
   100% {
     top: -100vh;
     opacity: 0;
   }
 }
+
 @keyframes floatUp {
   0% {
     top: 100vh;
     opacity: 0;
   }
+
   25% {
     opacity: 1;
   }
+
   50% {
     top: 0vh;
     opacity: 0.8;
   }
+
   75% {
     opacity: 1;
   }
+
   100% {
     top: -100vh;
     opacity: 0;
@@ -227,6 +247,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -236,6 +257,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -245,6 +267,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -254,6 +277,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -263,12 +287,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 0;
   }
@@ -278,12 +305,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 0;
   }
@@ -293,12 +323,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 0;
   }
@@ -308,12 +341,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 0;
   }
@@ -323,12 +359,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 1;
   }
@@ -338,12 +377,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 1;
   }
@@ -353,12 +395,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 1;
   }
@@ -368,12 +413,15 @@
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   80% {
     opacity: 0.9;
   }
+
   100% {
     opacity: 1;
   }
@@ -389,35 +437,42 @@
   transform: translate(100vw, 100vh);
   transform: translate(100vw, 100vh);
 }
+
 .footer-logo {
   text-align: start;
   padding: 10px;
 }
+
 .footer-logo img {
   width: 210px;
 }
+
 .bottom-area {
-  padding: 10px;
+  /* padding: 10px; */
 }
+
 .Footer-Menu {
   list-style: none;
   text-align: left;
   margin: auto;
 }
+
 .Footer-Menu h4 {
   font-weight: 500;
   font-size: 25px;
   color: #e9f1f1;
 }
+
 .Footer-Menu li a {
   color: rgb(238, 234, 234);
   text-decoration: none;
   font-size: 20px;
   font-weight: 400;
 }
+
 .social-icons {
   width: 200px;
-  margin: 15px auto;
+  /* margin: 15px auto; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -425,47 +480,57 @@
 
 .social-icons img {
   width: 30px;
-  margin: auto 10px;
+  /* margin: auto 10px; */
 }
 
 .CopyRight {
   width: 100%;
   background-color: rgb(194, 128, 52);
+  margin-top: 16px;
 }
+
 .CopyRight .row {
   padding: 0;
   margin: 0;
 }
+
 .CopyRight p {
   margin: auto;
   padding: 5px;
   font-size: 15px;
 }
+
 .address h4 {
   color: aliceblue;
   font-size: 15px;
   text-align: left;
 }
+
 .address span {
   text-align: left;
 }
+
 hr {
   border-top: 2px solid;
   color: rgb(194, 128, 52);
   opacity: 1.25;
 }
+
 @media (max-width: 575.5px) {
   .social-icons {
     flex-direction: row;
     align-items: center;
   }
+
   .social-icons img {
     margin: auto;
   }
+
   .jpu-logo {
     width: 250px;
     margin: 10px auto;
   }
+
   .CopyRight p {
     font-size: 10px;
   }
