--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
+
 body {
   margin: 0;
-  font-family:'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #232741; */
@@ -12,11 +13,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-html{
---white-gray:#f8f9fa;
---bs-blue: #232741;
+
+html {
+  --white-gray: #f8f9fa;
+  --bs-blue: #232741;
 }
-p{
+
+p {
   color: var(--white-gray);
 }
 
@@ -24,6 +27,7 @@ p{
 ::-webkit-scrollbar {
   width: 3px;
 }
+
 ::-webkit-scrollbar:hover {
   width: 10px;
 }
@@ -31,7 +35,7 @@ p{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #00a0e3;
+  background: rgb(21, 68, 137);
 }
 
 /* Handle */
@@ -43,19 +47,21 @@ p{
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-   background: #29b974;
+  background: #f29b3e;
 }
+
 html {
   scroll-behavior: smooth;
 }
 
-.Coming-soon{
-position: relative;
-text-align: center;
-align-items: center;
-height: 100vh;
+.Coming-soon {
+  position: relative;
+  text-align: center;
+  align-items: center;
+  height: 100vh;
 }
-.Coming-soon-content{
+
+.Coming-soon-content {
   position: absolute;
   top: 40%;
   left: 30%;
